Add legal docs and fix silent Vector→JNI fallback (B13) (#29)
* Add LICENSE, NOTICE, README, and community docs

Apache-2.0 LICENSE, NOTICE attributing simdjson C++/simdjson-java,
README with usage, platform matrix, and JVM requirements, plus
CODE_OF_CONDUCT and CONTRIBUTING.

* Log hint when Vector backend falls back to JNI on JVM

BackendSelector now detects whether the jdk.incubator.vector module
is present at runtime and logs a one-time INFO hint pointing
consumers to --add-modules jdk.incubator.vector when it silently
falls back to JNI on JDK 24+. Selection logic extracted into a pure
decide() function covering all branches (forced backend, JDK < 24,
missing module, unusable species) with unit tests for each.